syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package accounts;

service Accounts {
    rpc GetAccounts (google.protobuf.Empty) returns (GetAccountsResponse);
    rpc GetAccount (GetAccountRequest) returns (GetAccountResponse);
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
    rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountResponse);
    rpc UpdateAccount (UpdateAccountRequest) returns (UpdateAccountResponse);
}

message Account {
    string id = 1;
    string global_id = 2;
    string public_code = 3;
    string username = 4;
    string avatar = 5;
    string given_name = 6;
    string family_name = 7;
    string middle_name = 8;
    string email = 9;
    bool email_verified = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}

message GetAccountsResponse {
    bool success = 1;
    optional string message = 2;
    repeated Account accounts = 4;
}

message GetAccountResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Account account = 4;
    }
}

message CreateAccountResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Account account = 4;
    }
}

message DeleteAccountResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Account account = 4;
    }
}

message UpdateAccountResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Account account = 4;
    }
}

message GetAccountRequest {
    string user_id = 1;
}

message CreateAccountRequest {
    string global_id = 2;
    string username = 4;
    string avatar = 5;
    string given_name = 6;
    string family_name = 7;
    string middle_name = 8;
    string email = 9;
}

message DeleteAccountRequest {
    string user_id = 1;
}

message UpdateAccountRequest {
    string user_id = 1;
    optional string global_id = 2;
    optional string public_code = 3;
    optional string username = 4;
    optional string avatar = 5;
    optional string given_name = 6;
    optional string family_name = 7;
    optional string middle_name = 8;
    optional string email = 9;
    optional bool email_verified = 10;
}
